unpackaged/main/default/objects/CA_Section_Setting__c/CA_Section_Setting__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the section customization for an object. will be used with a parent Object settings record only</description>
    <label>CA Section Setting</label>
    <nameField>
        <displayFormat>CA_SS-{00000}</displayFormat>
        <label>SS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Section Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>