unpackaged/main/default/objects/CA_Section_Setting__c/fields/Event_Cost_Fields__c.field-meta.xml
<CustomField>
    <fullName>Event_Cost_Fields__c</fullName>
    <label>Event Cost Fields</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>