unpackaged/main/default/objects/CA_Section_Setting__c/fields/Exhibit_Cost_Fields__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Cost_Fields__c</fullName>
    <description>Enter the field api names separated by a comma which should appear on the product edit/detail pages</description>
    <inlineHelpText>Enter the field api names separated by a comma which should appear on the product edit/detail pages</inlineHelpText>
    <label>Exhibit Cost Fields</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>