unpackaged/main/default/objects/CA_Section_Setting__c/fields/Fields_On_Edit_Page__c.field-meta.xml
<CustomField>
    <fullName>Fields_On_Edit_Page__c</fullName>
    <description>Enter the API names of the fields that need to be displayed in this section on the edit page. There will be two columns and you would need to enter the fields in that sequence you want to see.
Eg: enter 1,2,3,4,5,6 to see
1_____2
3_____4
5_____6</description>
    <inlineHelpText>Enter the API names of the fields that need to be displayed in this section on the edit page. There will be two columns and you would need to enter the fields in that sequence you want to see.
Eg: enter 1,2,3,4,5,6 to see
1_____2
3_____4
5_____6</inlineHelpText>
    <label>Fields On Edit Page</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>