unpackaged/main/default/objects/CA_Section_Setting__c/fields/Precedence__c.field-meta.xml
<CustomField>
    <fullName>Precedence__c</fullName>
    <inlineHelpText>Give a number which will decide on what position this will be displayed. 1,2,3,4.... top to bottom</inlineHelpText>
    <label>Precedence</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>