unpackaged/main/default/objects/CA_Section_Setting__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GC Crown Castle</fullName>
            </value>
            <value>
                <fullName>GC Sig Sauer</fullName>
            </value>
            <value>
                <fullName>GC Pfizer</fullName>
            </value>
            <value>
                <fullName>GC NNI</fullName>
            </value>
            <value>
                <fullName>GC BMS Profile</fullName>
            </value>
            <value>
                <fullName>GC Merck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>