unpackaged/main/default/objects/CA_Section_Setting__c/fields/Section_Color__c.field-meta.xml
<CustomField>
    <fullName>Section_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <inlineHelpText>Prefix # with the hexadecimal value for the color that you want this section header to be displayed in. Default is white.</inlineHelpText>
    <label>Section Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>