unpackaged/main/default/objects/CA_Section_Setting__c/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <inlineHelpText>Give a header for the section</inlineHelpText>
    <label>Section Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>