unpackaged/main/default/objects/CA_Section_Setting__c/fields/Sponsorship_Cost_Fields__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Cost_Fields__c</fullName>
    <label>Sponsorship Cost Fields</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>